[build-system]
requires = ["setuptools>=46.4.0", "wheel"]
build-backend = "setuptools.build_meta"
# setuptools     ^^^ uses setup.cfg for configuration
# https://github.com/pypa/setuptools/issues/1688

#requires = ["flit_core == 3.*"]
#build-backend = "flit_core.buildapi"

[tool.setuptools_scm]

[tool.flit.metadata]
module = "ksykaitai"
author = "abitrolly"
