[metadata]
name = kaitaiStructCompile
author = KOLANICH
url = https://gitlab.com/kaitaiStructCompile.py/kaitaiStructCompile.py
description = the package to compile .ksy into .py while installing/building a python package
long_description = file: ReadMe.md
long_description_content_type = text/markdown
keywords = KaitaiStruct, compiler, binary format, setuptools, automation
license = Unlicense
license_file = UNLICENSE
classifiers =
	Programming Language :: Python
	Programming Language :: Python :: 3
	Development Status :: 4 - Beta
	Environment :: Other Environment
	Intended Audience :: Developers
	License :: Public Domain
	License :: Public Domain :: Unlicense
	Operating System :: OS Independent

[options]
python_requires = >=3.4
zip_safe = False
include_package_data = True
packages = kaitaiStructCompile
setup_requires = setuptools>=44; wheel; setuptools_scm[toml]>=3.4.3
test_suite = tests.test
install_requires = 
	setuptools
	kaitaiStructCompile.backend.CLI @ git+https://gitlab.com/kaitaiStructCompile.py/kaitaiStructCompile.backend.CLI.git
	kaitaiStructCompile.importer @ git+https://gitlab.com/kaitaiStructCompile.py/kaitaiStructCompile.importer.git
	kaitaiStructCompile.postprocessors @ git+https://gitlab.com/kaitaiStructCompile.py/kaitaiStructCompile.postprocessors.git
	kaitaiStructCompile.repo @ git+https://gitlab.com/kaitaiStructCompile.py/kaitaiStructCompile.repo.git

[options.extras_require]
setuptools = kaitaiStructCompile.setuptools[toml] @ git+https://gitlab.com/kaitaiStructCompile.py/kaitaiStructCompile.setuptools.git
