[metadata]
name = ksykaitai
author = abitrolly
version = attr: ksykaitai.__version__
url = https://gitlab.com/abitrolly/ksykaitai
description = .ksy importer with bundled compiler
long_description = file: README.md
long_description_content_type = text/markdown
keywords = kaitai, KaitaiStruct, compiler, binary format, automation
license = Unlicense
license_file = UNLICENSE
classifiers =
	Programming Language :: Python
	Programming Language :: Python :: 3
	Development Status :: 4 - Beta
	Environment :: Other Environment
	Intended Audience :: Developers
	License :: Public Domain
	License :: Public Domain :: Unlicense
	Operating System :: OS Independent

[options]
python_requires = >=3.4
install_requires =
  kaitaistruct
packages =
  kaitaiStructCompile
  kaitai-struct-compiler
py_modules =
  ksykaitai
test_suite = tests.test
# install files specified in MANIFEST.in
include_package_data = True
